--- a/EventGuru02/Fahad/Fahad-HomePage.storyboard
+++ b/EventGuru02/Fahad/Fahad-HomePage.storyboard
@@ -11,7 +11,7 @@
         <!--Home-->
         <scene sceneID="0fe-1d-YZ8">
             <objects>
-                <viewController id="RhS-tR-DXT" customClass="HomeViewController" customModule="EventGuru02" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="RhS-tR-DXT" customClass="ViewController" customModule="EventGuru02" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="a4G-QK-cjw">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -41,9 +41,6 @@
                         </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="Home" image="house.fill" catalog="system" id="tAx-9w-VNC"/>
-                    <connections>
-                        <outlet property="tableView" destination="CGx-9c-dyl" id="QH1-yp-I25"/>
-                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="GFe-jZ-epb" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
